code/tui/snapshots/fullscreen/collaboration_modes/effort_selector_drag_copy_narrow_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: frame_text(buffer)
---
  .                           [仪表盘]









           Copied 2 chars to clipboard
────────────────────────────────────────
  推理强度
    更快                     更聪明
    ───────────────▲───────────────
      low        high         max

              多任务  关闭

  使用更多推理，适合复杂任务和仔细验证
                   。

  ←/→ 选择  ·  Tab 切换多任务协作  ·
  Enter 应用  ·  Esc 取消
