code/tui/snapshots/fullscreen/collaboration_modes/effort_selector_staged.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render_effort(&app)
---
  .                                                                [Dashboard]

● Conversation remains visible











────────────────────────────────────────────────────────────────────────────────
  Thinking effort
               Faster                  Smarter
               ───────────────────────────▲───    Multitask  on
                 low        high         max

  Maximum reasoning. May use more tokens and take longer; use for the hardest
  tasks.

  ←/→ choose  ·  Tab toggle multitask  ·  Enter apply  ·  Esc cancel
